[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gemini-code-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = ">=3.1.5"
pandas = ">=2.3.2"
pydantic = ">=2.11.7"
pydantic-ai = ">=1.0.5"
python-dotenv = ">=1.1.1"
requests = ">=2.32.4"
tiktoken = ">=0.11.0"

[tool.poetry.scripts]
gemini_code_review = "gemini_code_review.cli:main"
